# ta-asterisk-alarm

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  config.example.yaml
src/: ami.rs  config.rs  main.rs
